add embeded youtube video

--- a/index.html
+++ b/index.html
@@ -82,22 +82,19 @@
             <div class="row">
                 <div class="box">
                     <img src="img/android-logo-E109D453E3-seeklogo.com.png" alt="">
-                    <h2 class="headings">Android Development</h2>
-                    <h4>Firebase, Bintray, MVVM, Single Activity Apps, Jetpack Component , Room Database, ADB Terminal, Fragments, Custom Views, Multi Modular Apps, Google Play Console, Android Profiler, Leak Canary, Maven Central</h4>
-                    <a href="https://www.youtube.com/watch?v=fis26HvvDII" id="link">Android Lecture</a>
+
+
+                    <iframe width="340" height="315" src="https://www.youtube.com/embed/YOkxv1y0iq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </iframe>
+                    </iframe>
                 </div>
                 <div class="box">
                     <img src="img/studio.png" alt="">
-                    <h2 class="headings">Android design</h2>
-                    <h4>Design kit (Figma), M2 guideline,Jetpack Compose Lists</h4>
-                    <a href="https://www.youtube.com/watch?v=KwpuAhYrIpU" id="link">Android design lecture</a>
+                    <iframe width="340" height="315" src="https://www.youtube.com/embed/Cv7CJg8pSIM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="box">
                     <img src="img/retrofit.png" alt="">
-                    <h2 class="headings">Tools development</h2>
-                    <h4>Build Gradle Plugins For Android, IDE Plugins, CLI's To Execute Environment Jobs Depends on OS With (Kotlin, Ruby, Groovy)</h4>
-                    <a href="https://www.youtube.com/watch?v=4JGvDUlfk7Y" id="link">Retrofit lecture</a>
-                </div>
+                    <iframe width="340" height="315" src="https://www.youtube.com/embed/KOdeKxRm_aA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                    
             </div>
         </h1>
