add snack bar to button

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             <input type="email" name="email" class="input"
             placeholder="Enter your email">
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
-            <input type="submit" value="SEND" id="send">
+            <input type="submit" value="SEND" id="send" onclick="showSnackbar()">
+            <div id="snackbar">Thanks I will respond to you later</div>
         </form>
     </section>
     
