add animations and features

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#about" class="nav-link">About me</a>
@@ -47,8 +47,28 @@
     <section id="home">
         <div id="main">
             <h1 class="headings">I  AM <br> UMUT ARPIDINOV</h1>
-            <p id="demo"></p>
             <a href="mailto:ymytbek0314@gmail.com" id="btn">Hire me</a>
+        </div>
+        <div id="job">
+            <h2>
+                <span>a</span>
+                <span>n</span>
+                <span>d</span>
+                <span>r</span>
+                <span>o</span>
+                <span>i</span>
+                <span>d</span>
+                <br>
+                <span>d</span>
+                <span>e</span>
+                <span>v</span>
+                <span>e</span>
+                <span>l</span>
+                <span>o</span>
+                <span>p</span>
+                <span>e</span>
+                <span>r</span>
+            </h2>
         </div>
     </section>
 
@@ -75,6 +95,24 @@
             <img src="img/sokoban.png" alt="">
             <img src="img/main.png" alt="">  
         </div>
+        <body>
+            <div class="center">
+                <div class="and-body">
+                    <span class="antena-left"></span>
+                    <span class="antena-right"></span>
+                    <span class="head-top">
+                        <span class="eyes-1"></span>
+                        <span class="eyes-2"></span>
+                    </span>
+                    <span class="body-center"></span>
+                    <span class="hand-left"></span>
+                    <span class="hand-right"></span>
+                    <span class="bottom-left"></span>
+                    <span class="bottom-right"></span>
+
+                </div>
+            </div>
+        </body>
     </section>
 
     <section id="services">
